--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/mainFragment">
 
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.cl.workdemo.MainFragment"
-        android:label="MainFragment" >
+        android:label="MainFragment">
         <action
             android:id="@+id/action_mainFragment_to_networkFragment"
             app:destination="@id/networkFragment" />
         <action
             android:id="@+id/action_mainFragment_to_frescoFragment"
-            app:destination="@id/frescoFragment"/>
+            app:destination="@id/frescoFragment" />
         <action
             android:id="@+id/action_mainFragment_to_jetpackFragment"
-            app:destination="@id/jetpackFragment"/>
+            app:destination="@id/nav_jetpack_graph" />
     </fragment>
 
     <fragment
@@ -28,10 +27,7 @@
     <fragment
         android:id="@+id/frescoFragment"
         android:name="com.cl.workdemo.FrescoFragment"
-        android:label="图片加载"/>
+        android:label="图片加载" />
 
-    <fragment
-        android:id="@+id/jetpackFragment"
-        android:name="com.cl.workdemo.jetpack.JetpackPageFragment"
-        tools:layout="jetpack的demo页面"/>
+    <include app:graph="@navigation/nav_jetpack_graph"/>
 </navigation>
