--- a/app/src/main/res/layout/fragment_jetpack.xml
+++ b/app/src/main/res/layout/fragment_jetpack.xml
@@ -1,22 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/tvGotoJetpackChild"
-            android:gravity="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
             android:text="启动jetpack测试子页面"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toTopOf="@id/tvGotoLifecyclePage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvGotoLifecyclePage"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="进入lifecycle测试页面"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGotoJetpackChild"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
