--- a/app/src/main/res/layout/fragment_jetpack_lifecycle.xml
+++ b/app/src/main/res/layout/fragment_jetpack_lifecycle.xml
@@ -15,6 +15,7 @@
 
     <!-- 生命周期 -->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -34,6 +35,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/stubContainer"
+            app:layout_constraintTop_toBottomOf="@id/btnInstallOrUninstall"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
